[S🛡️] temp remove ocr, update regex to be less strict, remove poll checks